# work_assistant

./: .gitignore  CLAUDE.md  README.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: 00-overview.md  01-architecture.md  02-data-model.md  03-advisor-protocol.md  04-ingestion-pipelines.md  05-phased-plan.md  06-failure-modes.md  07-open-decisions.md  08-bedrock-provider.md  README.md
docs/superpowers/plans/: 2026-06-04-ingest-worker-scaffold.md  2026-06-05-slack-source.md
docs/superpowers/specs/: 2026-06-03-ingest-worker-scaffold-design.md  2026-06-05-slack-source-design.md  2026-06-06-slack-uat-shelved.md
scripts/: slack_uat.sh
src/work_assistant/: __init__.py  cli.py  config.py  logging_setup.py  paths.py
src/work_assistant/db/: __init__.py  connection.py  migrations.py
src/work_assistant/ingest/: __init__.py  cli.py  clock.py  context.py  errors.py  lock.py  logging_bind.py  models.py  registry.py  runner.py  source.py  worker.py
src/work_assistant/mcp/: __init__.py  bridge.py  client.py
src/work_assistant/providers/: __init__.py  bedrock.py
tests/: conftest.py  test_config.py  test_db_connection.py  test_db_migrations.py  test_logging_setup.py  test_mcp_bridge.py  test_paths.py  test_providers_bedrock.py
tests/ingest/: conftest.py  fakes.py  test_cli.py  test_clock.py  test_context.py  test_errors.py  test_lock.py  test_logging_bind.py  test_mcp_client.py  test_models.py  test_registry.py  test_runner.py  test_source.py  test_worker.py  test_worker_slack.py
tests/ingest/sources/: _helpers.py  test_slack_errors.py  (+5 more)
(+4 files in other folders)
