[project]
name = "work-assistant"
version = "0.0.1"
description = "Personal agentic productivity assistant; Phase 0 foundations."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
  "click>=8.1",
  "pydantic>=2.7",
  "rich>=13.7",
  "keyring>=25.0",
  "claude-agent-sdk>=0.1.0",
  "mcp>=1.0.0",
  "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

[project.scripts]
wa = "work_assistant.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/work_assistant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
